--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "express-session": "^1.18.1",
     "ioredis": "^5.5.0",
     "mysql2": "^3.12.0",
+    "nestjs-pino": "^4.3.0",
+    "pino-http": "^10.4.0",
+    "pino-pretty": "^13.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20"
